# programming-practice-homework

./: .gitignore  readme.md
01-OOP-homework/: readme.md
01-OOP-homework/task1_member/: CDefine.h  CMember.cpp  CMember.h  CMemberList.cpp  CMemberList.h  MemberMain.cpp  pch.h  task1_member.sln  task1_member.vcxproj  task1_member.vcxproj.filters
01-OOP-homework/task2_shape/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeMain.cpp  Square.cpp  Square.h  task2_shape.sln  task2_shape.vcxproj  task2_shape.vcxproj.filters
01-OOP-homework/task3_max/: MaxMain.cpp  task3_max.sln  task3_max.vcxproj  task3_max.vcxproj.filters
02-C++-high-quality-programming-homework/: readme.md
02-C++-high-quality-programming-homework/doc/: class_diagram_24.pu  class_diagram_24_brief.pu
02-C++-high-quality-programming-homework/task1_24game/: CDefine.h  CFormula.cpp  CFormula.h  CGame.cpp  CGame.h  CNode.cpp  CNode.h  GameMain.cpp  pch.h  task1_24game.sln  task1_24game.vcxproj  task1_24game.vcxproj.filters
02-C++-high-quality-programming-homework/task2_24game_plus/: CDefine.h  CFormula.cpp  CFormula.h  CGamePlus.cpp  CGamePlus.h  CNode.cpp  CNode.h  GamePlusMain.cpp  task2_24game_plus.sln  task2_24game_plus.vcxproj  task2_24game_plus.vcxproj.filters
03-program-optimization-homework/: readme.md
03-program-optimization-homework/doc/: draw.py  time_record_10.txt  time_record_100.txt  time_record_1000.txt
03-program-optimization-homework/task1_time/: TimeMain.cpp  task1_time.sln  task1_time.vcxproj  task1_time.vcxproj.filters  time_record.txt
04-qt1-homework/: readme.md
04-qt1-homework/task1_numeric_keypad/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
04-qt1-homework/task2_temp_converter/: CMakeLists.txt  dialog.cpp  tempconverter.cpp
04-qt1-homework/task2_temp_converter/src/: dialog.cpp  dialog.h  tempconverter.h
05-qt2-homework/: readme.md
05-qt2-homework/task1_edit/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
05-qt2-homework/task1_edit/task1_edit/: CMakeLists.txt  (+3 more)
05-qt2-homework/task2_date/: CMakeLists.txt  date.cpp  datedialog.cpp  mainwindow.h
05-qt2-homework/task3_picture/: CMakeLists.txt  mainwindow.cpp  resource.qrc
05-qt2-homework/task3_picture/assets/: resource.qrc
05-qt2-homework/task3_picture/src/: mainwindow.cpp  mainwindow.h
(+4 files in other folders)
